# Anjay-lite-bare-metal-client

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md
cmake/: gcc-arm-none-eabi.cmake
config/: config.h
config/anj/: anj_config.h
src/: log.c  main.c  net.c  temperature_obj.c  temperature_obj.h  time.c
src/compat/: log.c  net.c  prng.c  time.c
src/compat/mbedtls/: anj_client_mbedtls_config.h  timing_alt.c  timing_alt.h
src/modem/: circ_buf.h  modem.c  modem.h  modem_constants.h  modem_rx.c  modem_rx.h  modem_tx.c  modem_tx.h
